added custom adapter for gridview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 
     <string name="slices_per_pizza">Slices per Pizza</string>
     <string name="slices_per_person">Slices per Person</string>
+    <string name="add_pizza">Add Pizza</string>
 </resources>
