Refactored name Pizza to Pizza Calculator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Pizza</string>
+    <string name="app_name">Pizza Calculator</string>
 
     <string name="action_settings">Settings</string>
 </resources>
